# ROSVideoRecorder

./: .gitignore  CMakeLists.txt  README.md  VideoRecorder.launch  package.xml  setup.py
launch/: VideoRecorder.launch
scripts/: VideoRecorder.py  test.py
